# Tasks

./: CMakeLists.txt  README.md  client.cpp  run.txt  server.cpp  setup.sh
scripts/: build.sh  prepare_build.sh  setup.sh
soruce/: CMakeLists.txt
soruce/client/: CMakeLists.txt
soruce/server/: CMakeLists.txt
source/: CMakeLists.txt
source/client/: CMakeLists.txt
source/client/public/: client.h
source/client/source/: client.c  config.c  main.c
source/server/: CMakeLists.txt
source/server/public/: config.h  server.h
source/server/source/: config.c  main.c  server.c
